# nercone-shell

./: README.md  pyproject.toml
src/nercone_shell/: __main__.py
