[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "nercone-shell"
version = "0.2.6"
description = "Modern shell for Developers"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Nercone", email = "nercone@diamondgotcat.net" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "nercone-modern"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
nersh = "nercone_shell.__main__:main"
